src/cses/digit_queries/clang-tidy.txt
1 warning and 1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/digit_queries/digit_queries.cpp.
/Users/michael/repos/competitive-programming/src/cses/digit_queries/digit_queries.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
/Users/michael/repos/competitive-programming/src/cses/digit_queries/digit_queries.cpp:20:9: warning: this loop is infinite; none of its condition variables (index) are updated in the loop body [bugprone-infinite-loop]
   20 |         while (index > block_digit_count) {
      |         ^
Found compiler error(s).
